fix graphics path

--- a/latex_files/main.tex
+++ b/latex_files/main.tex
@@ -12,6 +12,8 @@
 \usepackage[export]{adjustbox}
 \usepackage{placeins}
 
+\graphicspath{{../figures/}}
+
 \title{Benefits of Two Turbine Rotor Diameters and Hub Heights in the Same Wind Farm}
 
 \author{Andrew PJ Stanley\footnote{PhD Candidate, Department of Mechanical Engineering, 435 CTB, AIAA Student Member.} and Andrew Ning\footnote{Assistant Professor, Department of Mechanical Engineering, 435 CTB, AIAA Senior Member.}}
